@@ -1,7 +1,6 @@
 package fr.gouv.clea.indexation.index;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
 import fr.gouv.clea.config.BatchProperties;
 import fr.gouv.clea.indexation.model.output.ClusterFileIndex;
 import fr.gouv.clea.service.PrefixesStorageService;
@@ -46,7 +45,7 @@ public class GenerateClusterIndexTasklet implements Tasklet {
         return RepeatStatus.FINISHED;
     }
 
-    private void generateClusterIndex(final Long jobId, final Set<String> prefixes) throws IOException {
+    void generateClusterIndex(final Long jobId, final Set<String> prefixes) throws IOException {
 
         ClusterFileIndex clusterFileIndex = ClusterFileIndex.builder()
                 .iteration(jobId.intValue())
@@ -55,9 +54,8 @@ public class GenerateClusterIndexTasklet implements Tasklet {
 
         log.info("Generating cluster index : " + outputPath + File.separator + CLUSTER_INDEX_FILENAME);
 
-        Path jsonPath = Paths.get(outputPath + File.separator + CLUSTER_INDEX_FILENAME);
+        Path jsonPath = Path.of(outputPath, CLUSTER_INDEX_FILENAME);
         File jsonIndex = jsonPath.toFile();
-        objectMapper.enable(SerializationFeature.INDENT_OUTPUT);
         objectMapper.writeValue(jsonIndex, clusterFileIndex);
     }
 }
